# statebudgets

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  build_spendings.py  build_spendings.sh  pyproject.toml  requirements.txt  spendings.csv
.opencode/agents/: state-budget-collector.md
.opencode/skills/build-budgets-csv/: SKILL.md
.opencode/skills/download-budgets/: SKILL.md
.opencode/skills/get-policy-spending/: SKILL.md
.opencode/skills/get-policy-spendings/: SKILL.md
.streamlit/: config.toml
app/: Gasto_anual.py  main.py
app/pages/: Evolucion_temporal.py  tab_policies.py  tab_timeline.py
app/utils/: data_loader.py  shared.py
data/input/: spending.csv
general/: .gitignore  createDataSet.py  createDataSet.sh
general/datasets/: 01-Presupuestos-Generales-del-Estado-Consolidados-2021.csv  01-Presupuestos-Generales-del-Estado-Consolidados.csv  Presupuestos_2020.txt  Presupuestos_2021.txt
pensions/: createDataSet.py  createDataSet.sh
pensions/datasets/: edad.csv  edad2.csv  tramos.csv  tramos2.csv
scripts/: build_spending.py  build_spending.sh  build_spendings.sh  ensemble_spending.sh  politicas_gasto.txt
src/: __init__.py
src/analytics/: analyzer.py
src/pdf_processor/: __init__.py  base.py  converter.py  extractor.py
src/visualization/: charts.py
