[tool.poetry]
name = "statebudgets"
version = "0.1.0"
description = "This is an analysis project for the state budgets of Spain"
authors = ["jbernal"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.55.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
